https://github.com/craftercms/craftercms/issues/1002 - [studio-ui] Search screen pagination is below visible page area #1002

--- a/static-assets/themes/cstudioTheme/css/search.css
+++ b/static-assets/themes/cstudioTheme/css/search.css
@@ -150,7 +150,7 @@ input[type="text"].cstudio-wcm-search-result-header-pagination-textbox {
 
 #cstudio-wcm-search-result{
 	background-color:#FFFFFF;
-	min-height: 190px;
+	min-height: 200px;
 	padding: 40px 30px;
 }
 
